--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,4 +1,4 @@
-name: Django CI
+name: productpage
 
 on:
   push:
@@ -12,24 +12,24 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v2
-    - name: checkout code
+      - uses: actions/checkout@v2
+        name: checkout code
     
 #     - name: Docker build
 #     - uses: docker/setup-buildx-action@v1    
       
-    - name: Login to github registry
-      uses: docker/login-action@v1 
-      with:
-        username: Pungpeee
-        password: ${{ secrets.TOKEN_GITHUB__BP }}
+      - name: Login to github registry
+        uses: docker/login-action@v1 
+        with:
+         username: Pungpeee
+         password: ${{ secrets.TOKEN_GITHUB__BP }}
         
-    - name: Build image
-      uses: docker/build-push-action@v2
-      with:
-        file: ./Dockerfile
-        push: true
-        tags: ghcr.io/Pungpeee/bookinfo-productpage
+      - name: Build image
+        uses: docker/build-push-action@v2
+        with:
+          file: ./Dockerfile
+          push: true
+          tags: ghcr.io/Pungpeee/bookinfo-productpage
         
   deploy:
       runs-on: ubuntu-latest
