--- a/.github/workflows/productpage.yml
+++ b/.github/workflows/productpage.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Login to github registry
         uses: docker/login-action@v1 
         with:
-         username: Pungpeee
+         username: ${{ github.repository_owner }}
          password: ${{ secrets.TOKEN_GITHUB__BP }}
         
       - name: Build image
