--- a/.github/workflows/productpage.yml
+++ b/.github/workflows/productpage.yml
@@ -33,6 +33,7 @@ jobs:
           tags: ghcr.io/pungpeee/bookinfo-productpage
         
   deploy:
+      needs: build
       runs-on: ubuntu-latest
       
       steps:
