--- a/.github/workflows/productpage.yml
+++ b/.github/workflows/productpage.yml
@@ -15,8 +15,8 @@ jobs:
       - uses: actions/checkout@v2
         name: checkout code
     
-#     - name: Docker build
-#     - uses: docker/setup-buildx-action@v1    
+      - name: Docker build
+      - uses: docker/setup-buildx-action@v1    
       
       - name: Login to github registry
         uses: docker/login-action@v1 
@@ -41,11 +41,11 @@ jobs:
           uses: appleboy/ssh-action@master
           with:
             host: ${{ secrets.HOST }}
-            username: Pungpeee
+            username: pungpeee
             password: ${{ secrets.PASSWORD }}
             scripts: |
-               docker pull ghcr.io/pungpeee/bookinfo-productpage
-               docker build -t ghcr.io/Pungpeee/bookinfo-productpage
+               docker pull ghcr.io/pungpeee/bookinfo-productpage:latest
+               docker build -t ghcr.io/Pungpeee/bookinfo-productpage:latest
                docker images
                docker ps -a
                
