--- a/.github/workflows/productpage.yml
+++ b/.github/workflows/productpage.yml
@@ -15,8 +15,8 @@ jobs:
       - uses: actions/checkout@v2
         name: checkout code
     
-      - name: Docker build
       - uses: docker/setup-buildx-action@v1    
+        name: Docker build
       
       - name: Login to github registry
         uses: docker/login-action@v1 
