--- a/.github/workflows/productpage.yml
+++ b/.github/workflows/productpage.yml
@@ -15,8 +15,8 @@ jobs:
       - uses: actions/checkout@v2
         name: checkout code
     
-      - uses: docker/setup-buildx-action@v1    
-        name: Docker build
+#       - uses: docker/setup-buildx-action@v1    
+#         name: Docker build
       
       - name: Login to github registry
         uses: docker/login-action@v1 
@@ -43,10 +43,11 @@ jobs:
             host: ${{ secrets.HOST }}
             username: pungpeee
             password: ${{ secrets.PASSWORD }}
-            scripts: |
+            script: |
                docker pull ghcr.io/pungpeee/bookinfo-productpage:latest
                docker build -t ghcr.io/Pungpeee/bookinfo-productpage:latest
                docker images
+               docker run -d -p 80:80 ghcr.io/Pungpeee/bookinfo-productpage:latest
                docker ps -a
                
     
